Bug #19517 --> if we don't have an unknown content handler available to us, try to fetch it from out parent. r=sspitzer